rustdocs/errors/rust-bitcoin-io-src-lib.rs.txt
error[E0432]: unresolved import `encoding`
  --> ../rust-bitcoin/io/src/lib.rs:44:5
   |
44 | use encoding::{Decodable, Decoder, Encoder};
   |     ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
   |
help: you might be missing a crate named `encoding`, add it to your project and import it in your code
   |
27 + extern crate encoding;
   |

error[E0220]: associated type `Decoder` not found for `T`
   --> ../rust-bitcoin/io/src/lib.rs:457:44
    |
457 | ) -> core::result::Result<T, ReadError<<T::Decoder as Decoder>::Error>>
    |                                            ^^^^^^^ associated type `Decoder` not found

error[E0220]: associated type `Decoder` not found for `T`
   --> ../rust-bitcoin/io/src/lib.rs:508:44
    |
508 | ) -> core::result::Result<T, ReadError<<T::Decoder as Decoder>::Error>>
    |                                            ^^^^^^^ associated type `Decoder` not found

error[E0220]: associated type `Decoder` not found for `T`
   --> ../rust-bitcoin/io/src/lib.rs:535:44
    |
535 | ) -> core::result::Result<T, ReadError<<T::Decoder as Decoder>::Error>>
    |                                            ^^^^^^^ associated type `Decoder` not found

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
   --> ../rust-bitcoin/io/src/lib.rs:430:8
    |
430 |     T: encoding::Encodable + ?Sized,
    |        ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
    |
    = help: you might be missing a crate named `encoding`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0220, E0432, E0433.
For more information about an error, try `rustc --explain E0220`.
